# Seminar

./: .gitignore  Fix Bibliography.txt  README.md  Seminar - Amit Sides.rar  סמינר.docx
Articles/: C++ Articles.txt  Networks Articles.txt  Python Articles.txt  System Articles.txt
CodeExamples/: CMakeLists.txt  animals.cpp  main.cpp
Lecture/: Lecture.pptx  buffer_overflow  buffer_overflow.c  buffer_overflow_canary  example  example.c
Project/Client/: CMakeLists.txt  README.md  TLSSocket.cpp  TLSSocket.h  client.cpp  client.h  example.cpp  main.cpp  messages.h  tlssocket.cpp  tlssocket.h
Project/Client/Python/: input.py  main.py  test.py
Project/Client/dependencies/: CMakeLists.txt
Project/Client/tests/: big_file.py  dangerous.py  dangurous.py  error.py  multiple_in.txt  multiple_inputs.py  multiple_inputs_nl.py  normal.py  requirements.py  timeout.py
Project/Server/: Dockerfile  README.md  docker_runner.py  executer.py  main.py  requirements.txt  server.py
Project/Server/Certificates/: Makefile  test.ca
Project/Server/docker/: communication.py  messages.py  runner.py  settings.py
Project/Server/docker/test/: example.py  requirements.txt
Project/Server/docker/user/: example.py
Project/Server/docker_files/: communication.py  messages.py  requirements.txt  runner.py  settings.py
Project/Server/docker_files/user/: requirements.txt  test.py
PythonExample/: main.py
